# ai-service

./: .gitignore  README.md  env.sample  pyproject.toml
.docker/: docker-compose.yml
.docker/mongo-express/: Dockerfile
.docker/mongodb/: Dockerfile
.docker/redis-insight/: Dockerfile
docs/: README.md  development-env-setup.md
src/: config.py  constants.py  logger.py  main.py
src/api/: main.py
src/api/routes/v1/: router.py
src/api/routes/v1/endpoints/: eval.py
src/database/: mongodb.py
src/models/: eval_run.py
src/modules/auth/: dependencies.py  router.py  schemas.py  service.py
src/repositories/: dataset_repository.py
src/utils/: exception_handlers.py  exceptions.py  response.py
src/workers/: main.py
src/workers/tasks/: test.py
