[project]
name = "ai-service"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.30.0",
    "celery>=5.5.3",
    "colorama>=0.4.6",
    "cryptography>=43.0.0",
    "fastapi[standard]>=0.116.1",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "PyJWT>=2.9.0",
    "python-jose>=3.5.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "workos>=5.24.0",
]
